# alpaca_trading_bot

./: .gitignore  README.md  pyproject.toml
src/: first.py  main.py  monitoring.py
src/models/: signal.py
src/services/: alpaca_service.py  order_monitor.py  signal_executor.py  signal_processor.py
src/utils/: file_utils.py  logger.py  verify_setup.py
